--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,18 +30,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.3
+  http: ^0.13.4
   flutter_bloc: ^8.0.1
-  bloc: ^8.0.3
-  cached_network_image: ^3.2.0
-  hive: ^2.0.4
-  hive_flutter: ^1.1.0
+  equatable: ^2.0.5
+
+
 
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  hive: ^2.2.3
+  
 
 dev_dependencies:
   flutter_test:
